added GlobalExceptionHandler, changed JSON mapping, updated logging dependency, solved mvn build warnings and errors